added first product statistics section and method